--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <input type="checkbox" id="menu">
                         <label for="menu" class="menu"><i class="fa fa-bars"></i></label>
                         <ul>
-                            <li><a href="MeuBeck.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="exx024/pag01.html">Sobre</a></li>
                             <li class="last"><a href="contatos/contatos.html">Contatos</a></li>
                         </ul>
