--- a/exx024/pag01.html
+++ b/exx024/pag01.html
@@ -16,7 +16,7 @@
                 <input type="checkbox" id="menu">
                 <label for="menu" class="menu"><i class="fa fa-bars"></i></label>
                 <ul>
-                    <li><a href="../MeuBeck.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="pag01.html">Sobre</a></li>
                     <li class="last"><a href="../contatos/contatos.html">Contatos</a></li>
                 </ul>
